src/objects/c2g__WorkerItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpworkeritem</customHelpPage>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Worker Items</relationshipLabel>
        <relationshipName>WorkerItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EmailUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Worker Items</relationshipLabel>
        <relationshipName>WorkerItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__WorkAction__c</fullName>
        <label>Work Action</label>
        <picklist>
            <picklistValues>
                <fullName>Post Sales Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post &amp; Match Sales Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Journals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Currency Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculate Sales Tax on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculate Sales Tax on Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit Sales Tax on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit Sales Tax on Credit Note</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__WorkReferenceDescription__c</fullName>
        <label>Work Reference Description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__WorkReference__c</fullName>
        <label>Work Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Worker Item</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__WorkAction__c</columns>
        <columns>c2g__WorkReference__c</columns>
        <columns>c2g__WorkReferenceDescription__c</columns>
        <columns>c2g__Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Worker Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>